--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,15 +29,15 @@ jobs:
           - platform: windows
             os: windows-latest
             pixi-command: |
-              call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-              git clone --depth 1 --branch release-3.2.24 https://github.com/libsdl-org/SDL.git C:\SDL3-source
-              cmake -G Ninja -S C:\SDL3-source -B C:\SDL3-build -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=C:\SDL3
-              cmake --build C:\SDL3-build
-              cmake --install C:\SDL3-build
-              pixi run -e windows test_windows a1 b2 c3
-              echo test input data | pixi run -e windows arena_windows.exe --test-input
-              pixi run -e windows test_wordfreq_windows
-              pixi run -e windows build_mousecircle_windows
+              call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat" || exit /b 1
+              git clone --depth 1 --branch release-3.2.24 https://github.com/libsdl-org/SDL.git C:\SDL3-source || exit /b 1
+              cmake -G Ninja -S C:\SDL3-source -B C:\SDL3-build -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=C:\SDL3 || exit /b 1
+              cmake --build C:\SDL3-build || exit /b 1
+              cmake --install C:\SDL3-build || exit /b 1
+              pixi run -e windows test_windows a1 b2 c3 || exit /b 1
+              echo test input data | pixi run -e windows arena_windows.exe --test-input || exit /b 1
+              pixi run -e windows test_wordfreq_windows || exit /b 1
+              pixi run -e windows build_mousecircle_windows || exit /b 1
           - platform: wasm
             os: ubuntu-latest
             pixi-command: |
