--- a/pixi.toml
+++ b/pixi.toml
@@ -783,7 +783,7 @@ cl \
     /nologo \
     /std:c11 \
     /Zc:preprocessor \
-    /I"$CONDA_PREFIX/include" \
+    /I"C:/SDL3/include" \
     /I"base" \
     /I"native" \
     /I"." \
@@ -809,7 +809,7 @@ cl \
 link \
     /nologo \
     /subsystem:console \
-    /LIBPATH:"$CONDA_PREFIX/lib" \
+    /LIBPATH:"C:/SDL3/lib" \
     MouseCircle_standalone.obj \
     base_io.obj \
     buddy.obj \
