--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,14 +18,14 @@ jobs:
               pixi run -e linux test_linux a1 b2 c3
               echo "test input data" | pixi run -e linux ./arena_linux --test-input
               pixi run -e linux test_wordfreq_linux
-              pixi run -e linux build_mousecircle_linux
+              pixi run -e linux build_game_linux
           - platform: macos
             os: macos-latest
             pixi-command: |
               pixi run -e macos test_macos a1 b2 c3
               echo "test input data" | pixi run -e macos ./arena_macos --test-input
               pixi run -e macos test_wordfreq_macos
-              pixi run -e macos build_mousecircle_sdl
+              pixi run -e macos build_game_macos
           - platform: windows
             os: windows-latest
             pixi-command: |
@@ -33,7 +33,7 @@ jobs:
               pixi run -e windows test_windows a1 b2 c3 || exit /b 1
               echo test input data | pixi run -e windows arena_windows.exe --test-input || exit /b 1
               pixi run -e windows test_wordfreq_windows || exit /b 1
-              pixi run -e windows build_mousecircle_windows || exit /b 1
+              pixi run -e windows build_game_windows || exit /b 1
           - platform: wasm
             os: ubuntu-latest
             pixi-command: |
@@ -42,7 +42,7 @@ jobs:
               echo "test input data" | wasmtime --dir . arena.wasm --test-input
               echo "test input data" | wasmtime --dir . arena_base.wasm --test-input
               pixi run -e wasm test_wordfreq_wasm
-              pixi run -e wasm build_mousecircle_wasm
+              pixi run -e wasm build_game_wasm
 
     runs-on: ${{ matrix.os }}
     name: Test ${{ matrix.platform }}
