--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,19 +18,24 @@ jobs:
               pixi run -e linux test_linux a1 b2 c3
               echo "test input data" | pixi run -e linux ./arena_linux --test-input
               pixi run -e linux test_wordfreq_linux
+              # TODO: `test_game_linux` doesn't work yet:
+              #pixi run -e linux test_game_linux --test-frames 5
+              pixi run -e linux build_game_linux
           - platform: macos
             os: macos-latest
             pixi-command: |
               pixi run -e macos test_macos a1 b2 c3
               echo "test input data" | pixi run -e macos ./arena_macos --test-input
               pixi run -e macos test_wordfreq_macos
+              pixi run -e macos test_game_macos --test-frames 5
           - platform: windows
             os: windows-latest
             pixi-command: |
-              call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-              pixi run -e windows test_windows a1 b2 c3
-              echo test input data | pixi run -e windows arena_windows.exe --test-input
-              pixi run -e windows test_wordfreq_windows
+              call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat" || exit /b 1
+              pixi run -e windows test_windows a1 b2 c3 || exit /b 1
+              echo test input data | pixi run -e windows arena_windows.exe --test-input || exit /b 1
+              pixi run -e windows test_wordfreq_windows || exit /b 1
+              pixi run -e windows test_game_windows --test-frames 5 || exit /b 1
           - platform: wasm
             os: ubuntu-latest
             pixi-command: |
@@ -39,6 +44,7 @@ jobs:
               echo "test input data" | wasmtime --dir . arena.wasm --test-input
               echo "test input data" | wasmtime --dir . arena_base.wasm --test-input
               pixi run -e wasm test_wordfreq_wasm
+              pixi run -e wasm build_game_wasm
 
     runs-on: ${{ matrix.os }}
     name: Test ${{ matrix.platform }}
