--- a/pixi.toml
+++ b/pixi.toml
@@ -197,6 +197,9 @@ python = ">=3.10"
 [feature.wasm.target.win-64.dependencies]
 wasmtime = ">=38.0.3,<39"
 
+[feature.wasm.target.osx-arm64.dependencies]
+wasmtime = ">=38.0.3,<39"
+
 [feature.linux.tasks]
 build_linux = """
 clang \
