--- a/pixi.toml
+++ b/pixi.toml
@@ -515,7 +515,7 @@ link \
     /out:arena_windows.exe
 """
 
-test_windows = { cmd="arena_windows.exe", depends-on=["build_windows"] }
+test_windows = { cmd="./arena_windows.exe", depends-on=["build_windows"] }
 
 build_wordfreq_windows = """
 cl \
@@ -568,7 +568,7 @@ link \
     /out:wordfreq_windows.exe
 """
 
-test_wordfreq_windows = { cmd="wordfreq_windows.exe test_wordfreq.txt", depends-on=["build_wordfreq_windows"] }
+test_wordfreq_windows = { cmd="./wordfreq_windows.exe test_wordfreq.txt", depends-on=["build_wordfreq_windows"] }
 
 build_hotel2gltf_windows = """
 cl \
@@ -621,7 +621,7 @@ link \
     /out:hotel2gltf_windows.exe
 """
 
-test_hotel2gltf_windows = { cmd="hotel2gltf_windows.exe", depends-on=["build_hotel2gltf_windows"] }
+test_hotel2gltf_windows = { cmd="./hotel2gltf_windows.exe", depends-on=["build_hotel2gltf_windows"] }
 
 build_game_windows = """
 cl \
