--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,7 +33,7 @@ jobs:
             pixi-command: |
               call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat" || exit /b 1
               pixi run -e windows test_windows a1 b2 c3 || exit /b 1
-              echo test input data | pixi run -e windows arena_windows.exe --test-input || exit /b 1
+              echo test input data | pixi run -e windows ./arena_windows.exe --test-input || exit /b 1
               pixi run -e windows test_wordfreq_windows || exit /b 1
               pixi run -e windows test_game_windows --test-frames 5 || exit /b 1
           - platform: wasm
